<resources>
    <string name="app_name">ProjForLabs</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="sign_up">Sign up</string>
    <string name="here1"><u>Already have account? Sing in here!</u></string>
    <string name="here2"><u>Haven`t account? Sing up here!</u></string>
    <string name="sign_in">Login</string>
    <string name="cong">Congratulations</string>
    <string name="logout">Logout!</string>
    <string name="welcome">Welcome</string>
    <string name="somethingGoneWrong">Something gone wrong</string>
    <string name="emailAlreeadyExist">Sorry but such email already used!</string>
    <string name="correctPhone">Phone must be 13 symbols, and starts with +380</string>
    <string name="invalidEmail">Invalid email!</string>
    <string name="correctPassword">Password must be 8+ symbols!</string>
    <string name="pressToExit">Press again to exit</string>
    <string name="emptyFields">Fields are empty!</string>
    <string name="loginSucceful">Login successful</string>
    <string name="pleaseLogin">Please Login!</string>
    <string name="incorrectData">Email Or Password Incorrect! Please Try Again</string>
    <string name="conError">Internet connection losed!</string>
    <string name="close">Close</string>
    <string name="driver_type">Driver type</string>
    <string name="profile_picture">Profile picture</string>
    <string name="update">Update</string>
    <string name="enter_new_email">Enter new email</string>
    <string name="enter_new_username">Enter new username</string>
    <string name="tab2">Tab #2</string>
    <string name="image_uploaded">Image uploaded!</string>
    <string name="username_updated">Username is updated!</string>
    <string name="email_updated">Email is updated!</string>
    <string name="enter_username">Please enter username</string>
    <string name="current_name">Nick: </string>
    <string name="current_email">Email:</string>
    <string name="msg_token_fmt">OK</string>
    <string name="error">Data is missing!</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_post">PostActivity</string>

</resources>
