<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <ImageView
        android:id="@+id/user_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginRight="110dp"
        android:contentDescription="@string/profile_picture"/>
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/current_name"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="-75dp"
        android:textColor="@color/black"
        android:text="@string/current_name"
        android:textSize="15sp">
    </TextView>

    <TextView
        android:id="@+id/current_email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:text="@string/current_email"
        android:textColor="@color/black"
        android:textSize="15sp">
    </TextView>

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="110dp"
        android:layout_gravity="center"
        android:id="@+id/upload_avatar"
        android:text="@string/update"/>

    <Button
        android:id="@+id/logout_btn"
        android:layout_marginTop="-40dp"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginLeft="100dp"
        android:text="@string/logout"
        android:textColor="@color/black" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/enter_new_email"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:id="@+id/new_email"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/update"
        android:id="@+id/refresh_email"
        android:layout_marginTop="15dp"
        android:layout_marginRight="110dp"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/enter_new_username"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:id="@+id/new_name"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/update"
        android:layout_marginRight="110dp"
        android:layout_marginTop="15dp"
        android:id="@+id/refresh_name"
        android:textColor="@color/black"/>



</LinearLayout>